# command-dashboard

./: .gitignore  README.md  pyproject.toml  pytest.ini
command_dashboard/: commands.py  main.py  style.tcss
command_dashboard/themes/: theme.py
command_dashboard/utils/: load_commands.py
command_dashboard/views/: main_panel.py  sidebar.py
command_dashboard/widgets/: category_button.py  command_button.py  nav_button.py  subcategory_button.py
src/: main.py  style.tcss
src/commands/: datentypen.py  linux.py  mysql.py
src/utils/: icon_map.py  load_commands.py  utilities.py
src/views/: main_panel.py  sidebar.py
src/widgets/: category_button.py  command_button.py  nav_button.py  subcategory_button.py
tests/: conftest.py  test_category_button.py  test_command_button.py  test_get_subcategory_buttons.py  test_load_commands.py  test_main.py  test_main_panel.py  test_nav_button.py  test_sidebar.py  test_subcategory_button.py
