[project]
name = "command-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "dcazrael",email = "msachdev@live.de"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0.0"
dependencies = [
    "textual (>=3.1.0,<4.0.0)",
    "textual-dev (>=1.7.0,<2.0.0)",
    "pyperclip (>=1.9.0,<2.0.0)"
]

[project.scripts]
dev = "src.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.poetry]

packages = [{ include = "src", from = "." }]
